# solana_token_compliance

./: Anchor.toml  Cargo.toml  README.md  md.md  package.json  tsconfig.json
programs/: info.md  prompt.md
programs/geo_restrict_module/: Cargo.toml
programs/geo_restrict_module/src/: lib.rs
programs/geo_restrict_module/src/instructions/: check_compliance.rs  initialize.rs  is_bound.rs  mod.rs
programs/geo_restrict_module/src/interface/: imodular_compliance.rs
programs/geo_restrict_module/src/state/: geo_state.rs  mod.rs
programs/kyc_module/src/: lib.rs
programs/modular_compliance/: Cargo.toml
programs/modular_compliance/src/: lib.rs
programs/modular_compliance/src/instructions/: add_module.rs  check_compliance.rs  initialize.rs  mod.rs  remove_module.rs
programs/modular_compliance/src/interface/: imodular_compliance.rs  mod.rs
programs/modular_compliance/src/state/: compliance_state.rs  mod.rs
programs/modules/geo_restrict_module/: Cargo.toml
programs/modules/geo_restrict_module/src/: lib.rs
programs/modules/geo_restrict_module/src/instructions/: bind_compliance.rs  (+4 more)
programs/modules/kyc_module/: Cargo.toml
programs/token_program/: Cargo.toml
programs/token_program/src/: lib.rs
programs/token_program/src/instructions/: create.rs  mint.rs  transfer.rs
tests/: compliance_test.spec.ts  modular_compliance.ts  test.spec.ts  test_create_token.spec.ts.txt
tests/modular_compliance/: modular_compliance_test.spec.ts
tests/token/: full_stage_test.spec.ts
tests/token_program/: rwa_token_test.spec.ts
wallets/: phantom-keypair.json
(+1 files in other folders)
