[workspace]
members = [
    "programs/modular_compliance",
    "programs/modules/geo_restrict_module",
    "programs/modules/kyc_module",
    "programs/token_program",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
